sass/app.scss
/* ... */
.footer-columns {
    background: image-url("bg/bg-footer.png") repeat;
    padding-bottom: 15px;
    .elf img {
        margin-top:-80px;
    }
    p {
        font-size: 14px;
    }
    .upcoming-events li a {
        color: $green;
    }
}
.footer-nav {
    background: #523219;
    padding-top: 15px;
    .link-list a {
        font-size:15px;
    }
}
footer {
    margin-top: 60px;
    color: #E2D8D0;
    h5 {
        margin-top: 25px;
        a {
            color: #E2D8D0 !important;
            &:hover {
                color: $white !important;
            }
        }
    }
}
h1, h2, h3 {
    font-family: 'Museo300Regular';
    font-weight: normal;
}
.handwritten {
    font-family: 'HandOfSeanRegular';
    font-weight: normal;
}
.side-nav a {
    font-weight: bold;
}
.glyph {
  font-family: 'FoundationIconsGeneral';
  &.social {
    font-family: 'FoundationIconsSocial';
    font-size: 24px;
    li a {
        border-radius: 50%;
        color: $darkPurple;
        background: $white;
        width:25px;
        height:25px;
        text-align: center;
        opacity: .5;
        &:hover {
            opacity:1;
        }
    }
  }
}
.reveal-modal .row {
    width:auto !important;
    max-width: 106% !important;
    margin-left:-($columnGutter / 2);
    margin-right:-($columnGutter / 2);
}
.side-nav {
    background:$white;
}
.right {
  float: right;
}
.left {
  float: left;
}

.next-season {
  display: none; 
}

/* Donate Page */
.choose-donation { margin-top: 60px; margin-bottom: 40px; }
.panel.donate { background: lighten($darkPurple, 58%); border: solid 1px lighten($darkPurple, 45%); }

/* Progress Bar */
.progress-bar {
  width: 100%;
  height: 30px;
  border: solid 1px #888;
  .progress-status {
    width: 40%;
    height: 100%;
    background: #ddd;
  }
} 
.sticky {position:fixed; top:10px;}

/*Holiday Slider*/
#holidaySlider {
    min-height:450px !important;
}
img.right {
    width:200px;
    margin-left:$columnGutter;
}
#holidaySlider .columns {
    background:$white;
    box-shadow: 0px 3px 20px rgba(0,0,0,.1);
    width:90%;
    padding:15px !important;
    border: 1px solid #ddd;
    margin-left: 50px;
}
/*Who We Help*/
.circle-icon {
    font-size: ms(4);
    font-weight:bold;
    color: $white;
    background: image-url("icons/bg-orange.png") no-repeat center center;
    padding: 28px 38px;
    width: 100px;
    height: 100px;
    display:block;
}
.contact.panel {
    .banner.button {
        padding: 21px 28px 21px 26px !important;
    }
}
@media screen and (max-width: 767px) {
    .button.banner { 
        padding: 21px 35px 21px 25px !important;  
    }
    .reveal-modal {
        .button.banner {
            padding-right: 5px !important;
        }
    }
    .reveal-modal .nav-bar {
        background: transparent none;
        li {
            border:0;
            a {
            color: $darkPurple;
            }
        }
    }
    .footer-nav ul.link-list li {
        display:block;
        width:100%;
        float:none;
    }
}

